--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/brain-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#6366f1" />
     <meta name="description" content="ISL - Interview as a Second Language. AI-powered interview practice app." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <link rel="apple-touch-icon" href="/brain-icon.png" />
     <title>ISL - Interview Practice</title>
+    
+    <!-- Suppress browser extension errors -->
+    <script>
+      window.addEventListener('error', (e) => {
+        if (e.filename && (e.filename.includes('extension://') || e.filename.includes('webpage_content_reporter'))) {
+          e.stopImmediatePropagation();
+          return false;
+        }
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
