Rebrand to InterviewAnswers.ai - clean design

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#6366f1" />
-    <meta name="description" content="ISL - Interview as a Second Language. AI-powered interview practice app." />
+    <meta name="description" content="InterviewAnswers.ai - Master your interview answers with AI-powered practice, real-time feedback, and expert coaching." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>ISL - Interview Practice</title>
+    <title>InterviewAnswers.ai - Master Your Interview Answers</title>
     
     <!-- Suppress browser extension errors -->
     <script>
